istio/gateway-dr-vs-reachout.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - 10.10.10.1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-host
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: reachout
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-host-through-egress-gateway
spec:
  hosts:
  - 10.10.10.1
  gateways:
  - istio-egressgateway
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: reachout
        port:
          number: 80
      weight: 100
  - match:
    - gateways:
      - istio-egressgateway
      port: 80
    route:
    - destination:
        host: reachout
        port:
          number: 80
      weight: 100
